--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.8.4",
+    "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-medium-image-zoom": "^5.2.14",
     "react-router-dom": "^7.4.0",
+    "react-toastify": "^11.0.5",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
